<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.dell.habittrackerapp.EditorActivity"
    android:background="@color/editor_backgrnd">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name"
            style="@style/CategoryStyle" />

        <EditText
            android:id="@+id/edit_student_name"
            android:hint="@string/hint_student_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="4dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/roll_no"
            style="@style/CategoryStyle" />

        <EditText
            android:id="@+id/edit_student_rollno"
            android:hint="@string/hint_student_rollno"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/gender"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/age"
            style="@style/CategoryStyle" />

        <EditText
            android:id="@+id/edit_student_age"
            android:hint="@string/hint_student_age"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

    </LinearLayout>
</LinearLayout>
